--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #a4d3d9;
+    background-color: #abe7ef;
 }
 
 
@@ -46,6 +46,15 @@ body{
     padding: 1rem 0;
 }
 
+.play, .homeBtn {
+    background-color: #ebe9e4;
+    color: #000000;
+    padding: 1rem;
+    border: 1px solid #787774;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+
 
 #root {
     margin: 30px;
@@ -75,7 +84,6 @@ body{
 .home {
     float: left;
 }
-
 .btnPartHeader {
     float: right;
     margin: 30px;
@@ -95,10 +103,37 @@ body{
 .btnPart {
     display: inline-flex;
 }
+/*.btn {
+    width: 90px;
+    height: 20px;
+    background-color: rgb(207, 205, 200);
+    color: black;
+    font-size: 1em;
+    text-align: center;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}*/
+
+.btnDeActive {
+    width: 90px;
+    background-color: rgb(207, 205, 200);
+    color: rgb(153, 153, 153);
+    font-size: 1em;
+    text-align: center;
+    padding: 5px;
+    border: 2px solid rgb(153, 153, 153);
+    border-radius: 5px;
+    margin: 5px;
+    cursor: pointer;
+}
 
 .menuWrapper {
-
-    width: 90%;
+    max-width: 700px;
+    width: 75%;
     margin: auto;
     background: #d2ffd8;
     margin-top: 50px;
@@ -110,7 +145,16 @@ body{
 
 }
 
-.submitBtn, .btn, .loginBtn{
+
+input {
+    width: 75%;
+    margin-right: 25px;
+    padding: 15px 0 15px 15px;
+    border-radius: 4px;
+    border: 1px solid rgb(238, 238, 238);
+}
+
+.submitMenuBtn, .submitBtn, .btn, .createBtn, .editBtn, .editBtn2, .loginBtn{
     background: #62c7ff;
     border: none;
     font-size: 1rem;
@@ -122,6 +166,8 @@ body{
     border: 1px solid black;
     cursor: pointer;
 }
+
+
 
 ul {
     list-style: none;
@@ -136,6 +182,15 @@ li {
     display: flex;
 }
 
+.completeItemsList {
+    width: 100%;
+    margin-top: 20px;
+    padding: 0px;
+}
+
+.oneItem {
+    padding: 4px;
+}
 
 
 .tableData{
@@ -146,9 +201,3 @@ li {
     background-color: whitesmoke;
     border-radius: 5px;
 }
-
-.lastInput{
-    display: none;
-}
-
-
