--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+/*This file has code from the lecturer and has been changed to fit this assignment*/
+/*https://github.com/arcuri82/web_development_and_api_design/blob/master/les07/server_client_together/public/style.css*/
+
+
 body{
     background-color: #B3E5FC;
 }
